--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html, body {
-    background-color:#E7F3FA;
-    font-family: Helvetica, Arial, Verdana, sans-serif;
+    background-color:#FFF;
+    font-family: Arial, Verdana, sans-serif;
     font-size: 1.1em;
     margin:0;
     padding:0;
@@ -23,7 +23,7 @@ html, body {
     width: 100%;
     margin: 0 0 5px 0;
 }
-.videoitem:nth-child(2n) {
+.videoitem:nth-child(odd) {
         background: white;
 }
 .info .videoname{
