--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color:#FFF;
+    background-color:#EBEBEB;
     font-family: Arial, Verdana, sans-serif;
     font-size: 1.1em;
     margin:0;
@@ -16,7 +16,7 @@ html, body {
 .videoitem{
     padding: 5px;
     clear: both;
-    background: #D7E7E9;
+    background: #E5E5E5;
     display: block;
     position: relative;
     height: 100px;
@@ -25,6 +25,9 @@ html, body {
 }
 .videoitem:nth-child(odd) {
         background: white;
+}
+.videoitem:hover{
+    background: #D7E7E9;
 }
 .info .videoname{
     float:left;
