--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html, body {
 .videoitem{
     padding: 5px;
     clear: both;
-    background: #E5E5E5;
+    background: #f7f4f4;
     display: block;
     position: relative;
     height: 100px;
